<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStartEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEndEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <EditText
        android:id="@+id/textInputView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:importantForAutofill="no"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="@dimen/text_label_size"
        app:layout_constraintBottom_toTopOf="@+id/textFilterView"
        app:layout_constraintEnd_toEndOf="@+id/guideEndEditText"
        app:layout_constraintStart_toEndOf="@id/guideStartEditText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/textFilterView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_filter"
        android:importantForAutofill="no"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="@dimen/text_label_size"
        app:layout_constraintBottom_toTopOf="@+id/resultTextView"
        app:layout_constraintEnd_toEndOf="@+id/guideEndEditText"
        app:layout_constraintStart_toEndOf="@id/guideStartEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/result_text"
        android:singleLine="true"
        android:textSize="@dimen/text_label_size"
        app:layout_constraintBottom_toBottomOf="@+id/guideBottom"
        app:layout_constraintEnd_toEndOf="@+id/guideEndEditText"
        app:layout_constraintStart_toEndOf="@id/guideStartEditText"
        app:layout_constraintTop_toBottomOf="@+id/textFilterView" />

</androidx.constraintlayout.widget.ConstraintLayout>